--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "AppSettings": {
+    "Token": "Clé secrète dont la taille > 128 bits lol"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DonetFun.db"
   },
