--- a/appsettings.json
+++ b/appsettings.json
@@ -17,5 +17,10 @@
         "Default": "Warning"
       }
     }
+  },
+  "CloudinarySettings": {
+    "CloudName": "ddexxv3vx",
+    "ApiKey": "472343675148832",
+    "ApiSecret": "As2hoSTgSquP428FV1MEom9uBYY"
   }
 }
